# Verool

./: .gitignore  CMakeLists.txt  README.md
mem_pool/: allocator.h  object_pool.h
mem_pool/allocator/: array_allocator.h  malloc_allocator.h
test_array/: a.h  main.cpp
test_malloc/: a.h  main.cpp
